--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ video{ width:100%; height:auto; display:block;margin:0 auto;}	.down_search,.over
 </div>
 <div id="zoom" style="text-align:left;padding:40px 0;min-height:300px;">
 
-<!--ZJEG_RSS.content.begin--><meta name="ContentStart"><p style="text-indent: 2em; text-align: left;">翰墨书盛世，丹青绘华章。为庆祝中华人民共和国75周年华诞，9月29日上午，由中共江苏省委宣传部、江苏省文化和旅游厅、江苏省文学艺术界联合会共同主办的“奋进新征程——庆祝中华人民共和国成立75周年江苏省美术书法展”在江苏省美术馆开幕。</p><p style="text-indent: 2em; text-align: left;">本次展览不仅是对祖国的深情祝福，也是江苏美术书法创作新气象的一次集中展现。展览荟萃呈现的291件美术书法作品，既有我省入选第十四届全国美展的部分优秀作品，也有书法名家的委约新创作品，还有致敬“两弹一星”功勋奖章获得者主题雕塑创作的特邀代表作品，让展览更加丰富多元、更显凝炼厚重。</p><p style="text-indent: 2em; text-align: left;">近年来，我省高度重视美术书法工作，积极推进美术书法创作繁荣和高质量发展，在今年第十四届全国美展、全国第十三届书法篆刻展和第八届中国书法兰亭奖中，江苏捷报频传，取得了优异成绩。</p><p style="text-indent: 2em; text-align: left;">省国画院、省美术馆、省书法院、省美协、省文旅厅艺术处部分干部职工，美术爱好者江苏书法家协会会员，中国书法家协会会员大局等约100人参加活动。展览将持续开放至10月13日。</p><meta name="ContentEnd"><!--ZJEG_RSS.content.end--></div>
+<!--ZJEG_RSS.content.begin--><meta name="ContentStart"><p style="text-indent: 2em; text-align: left;">翰墨书盛世，丹青绘华章。为庆祝中华人民共和国75周年华诞，9月29日上午，由中共江苏省委宣传部、江苏省文化和旅游厅、江苏省文学艺术界联合会共同主办的“奋进新征程——庆祝中华人民共和国成立75周年江苏省美术书法展”在江苏省美术馆开幕。</p><p style="text-indent: 2em; text-align: left;">本次展览不仅是对祖国的深情祝福，也是江苏美术书法创作新气象的一次集中展现。展览荟萃呈现的291件美术书法作品，既有我省入选第十四届全国美展的部分优秀作品，也有书法名家的委约新创作品，还有致敬“两弹一星”功勋奖章获得者主题雕塑创作的特邀代表作品，让展览更加丰富多元、更显凝炼厚重。</p><p style="text-indent: 2em; text-align: left;">近年来，我省高度重视美术书法工作，积极推进美术书法创作繁荣和高质量发展，在今年第十四届全国美展、全国第十三届书法篆刻展和第八届中国书法兰亭奖中，江苏捷报频传，取得了优异成绩。</p><p style="text-indent: 2em; text-align: left;">省国画院、省美术馆、省书法院、省美协、省文旅厅艺术处部分干部职工，美术爱好者江苏书法家协会会员、中国书法家协会会员大局等约100人参加活动。展览将持续开放至10月13日。</p><meta name="ContentEnd"><!--ZJEG_RSS.content.end--></div>
 
 <div class="ie8sys">
   <span style="" id="qr_container">扫一扫在手机打开当前页</span>
